# ai_module

./: pyproject.toml  setup.py
src/aimodule/db/: alchemy.py  config.py
src/aimodule/processing/: processing.py
src/aimodule/selenium/: helper.py
src/aimodule/utils/: filemanager.py
test/: alchemy_test.py  filemanager_test.py  processing_test.py  selenium_test.py
